# fastapi_starter

./: .env.example  .pre-commit-config.yaml  .python-version  CHANGELOG.md  LICENSE  README.md  commitlint.config.js  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
alembic/: env.py
docker/: .env.example  Dockerfile  docker-compose.yaml
infra/: .env.example  docker-compose.yml
infra/nginx/: dev.conf
src/fastapi_starter/: __init__.py  exception_handlers.py  main.py  setup.py
src/fastapi_starter/core/: exceptions.py  protocols.py  security.py
src/fastapi_starter/core/auth/: __init__.py  cookies.py  dependencies.py  extractors.py  jwks.py  jwks_manager.py  protocols.py  schemas.py  service.py
src/fastapi_starter/core/config/: __init__.py  app.py  base.py  database.py  keycloak.py  server.py
src/fastapi_starter/core/database/: __init__.py  dependencies.py  manager.py  protocols.py  repository.py
src/fastapi_starter/core/logging/: __init__.py  config.py  middleware.py  processors.py
src/fastapi_starter/features/: __init__.py
src/fastapi_starter/features/auth/: __init__.py  client.py  router.py  schemas.py
src/fastapi_starter/features/health/: __init__.py  router.py
tests/: conftest.py  test_exception_handlers.py  test_main.py  test_setup.py
tests/core/: test_exceptions.py  test_protocols.py
tests/core/auth/: conftest.py  test_dependencies.py  test_extractors.py  test_jwks.py  test_schemas.py  test_service.py
tests/core/config/: test_settings.py
tests/core/database/: conftest.py  test_dependencies.py  test_manager.py  test_repository.py
tests/features/: conftest.py
tests/features/auth/: conftest.py  test_client.py  test_router.py
tests/features/health/: test_router.py
